--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "btang-cli",
-  "version": "1.0.2",
+  "name": "@bantangzm/btang-cli",
+  "version": "1.0.3",
   "description": "a cli tool to create project about react,vue",
   "main": "/src/core/index.js",
   "type": "module",
